# OmniBank-Local

./: .dockerignore  .gitignore  BUILD_GUIDE.md  CHANGELOG.md  Dockerfile  Dockerfile.standalone  LICENSE  LICENSE_ORGANISATION.md  README.md  build_log.txt  clean.patch  diff.txt  diff_utf8.patch  docker-compose.yml  docker-entrypoint.sh  fix_encoding.py  fix_titles.py  fix_utf8.py  latest.json  nginx.conf  package.json  replace_alerts.py  requirements.txt  restore.py  run_server.py  run_tests.ps1  test_point_4.py  unraid-template.xml
src-tauri/: .tauri-public-key  Cargo.toml  tauri.conf.json  tauri.conf.onefile.json
src-tauri/capabilities/: default.json
src-tauri/resources/omnibank-api/_internal/app/: _license_secret.py  database.py  init_data.py  models.py
src-tauri/resources/omnibank-api/_internal/app/routers/: ai_helpers.py  auto_backup.py  chat.py  config.py  csv_manager.py  csv_parser.py  license.py  recurrences.py  shared_mode.py  stats.py  transactions.py
src-tauri/resources/omnibank-api/_internal/app/schemas/: api_schemas.py
src-tauri/resources/omnibank-api/_internal/app/services/: finance_engine.py
src-tauri/resources/omnibank-api/_internal/numpy-2.4.4.dist-info/: RECORD
src-tauri/resources/omnibank-api/_internal/static/: index.html
src-tauri/resources/omnibank-api/_internal/static/css/: style.css
src-tauri/resources/omnibank-api/_internal/static/i18n/: en.json
src-tauri/resources/omnibank-api/_internal/static/js/components/: multi-select.js
src-tauri/resources/omnibank-api/_internal/static/js/views/: budgets.js  (+5 more)
src-tauri/src/: main.rs
(+69 files in other folders)
